name:                run-with-ssm
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/andreyk0/run-with-ssm#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@google.com
copyright:           Copyright: (c) 2016 Andrey Kartashov
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable run-with-ssm
  hs-source-dirs:      .

  main-is:             Main.hs

  other-modules:       Args

  build-depends:       base
                     , aeson
                     , amazonka
                     , amazonka-core
                     , amazonka-ssm
                     , ansi-wl-pprint
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , exceptions
                     , gitrev
                     , lens
                     , optparse-applicative
                     , resourcet
                     , semigroups
                     , text
                     , transformers
                     , transformers-base
                     , unix
                     , unordered-containers

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded

